--- a/css/styles.css
+++ b/css/styles.css
@@ -15,3 +15,15 @@ h2{
   padding-bottom: 5px;
   padding-top: 5px;
 }
+
+backgroundImage{
+  opacity: .75
+}
+
+h4 {
+  color: lemonchiffon;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+#orderFinish{
+  text-align: center;
+}
