--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ backgroundImage{
 }
 
 h4 {
-  color: lemonchiffon;
+  color: orange;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 #orderFinish{
