--- a/css/styles.css
+++ b/css/styles.css
@@ -16,14 +16,31 @@ h2{
   padding-top: 5px;
 }
 
-backgroundImage{
-  opacity: .75
+.form-group {
+  padding-bottom:15px;
 }
 
+
 h4 {
+  color: orange;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+h3 {
   color: orange;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 #orderFinish{
   text-align: center;
 }
+
+.pizzaTime {
+  color: white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+p {
+  color: white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+/*#pizzaShow {
+  display: none;
+}*/
