--- a/css/styles.css
+++ b/css/styles.css
@@ -34,13 +34,17 @@ h3 {
 }
 
 .pizzaTime {
-  color: white;
+  color: orange;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 p {
-  color: white;
+  color: orange;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
-/*#pizzaShow {
+ul {
+  color: orange;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+/*#toppings {
   display: none;
 }*/
